After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595471 - Fix clang bugs
Fix clang bugs
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2009-09-17 15:03 UTC by Bastien Nocera
Modified: 2009-09-21 11:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove unused variable in xspf writer code (1.03 KB, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Fix dead assignment in OPML parsing (935 bytes, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Also export the contact from RSS feeds (924 bytes, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Remove unused title variable (824 bytes, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Use g_mapped_file_unref() instead of _free() (1.11 KB, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Remove unused num_entries variable from PLA writer (1.03 KB, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Remove useless assignment (663 bytes, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Fix retval of the PLA parser (723 bytes, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
You can't get a logo in atom:entry (1.41 KB, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review
Remove unused variable in PLS parser (1.02 KB, patch)
2009-09-17 15:03 UTC, Bastien Nocera
none Details | Review

Description Bastien Nocera 2009-09-17 15:03:07 UTC
A bunch of bugs discovered by the clang parser.
Comment 1 Bastien Nocera 2009-09-17 15:03:13 UTC
Created attachment 143353 [details] [review]
Remove unused variable in xspf writer code
Comment 2 Bastien Nocera 2009-09-17 15:03:16 UTC
Created attachment 143354 [details] [review]
Fix dead assignment in OPML parsing
Comment 3 Bastien Nocera 2009-09-17 15:03:20 UTC
Created attachment 143355 [details] [review]
Also export the contact from RSS feeds
Comment 4 Bastien Nocera 2009-09-17 15:03:24 UTC
Created attachment 143356 [details] [review]
Remove unused title variable
Comment 5 Bastien Nocera 2009-09-17 15:03:27 UTC
Created attachment 143357 [details] [review]
Use g_mapped_file_unref() instead of _free()
Comment 6 Bastien Nocera 2009-09-17 15:03:30 UTC
Created attachment 143358 [details] [review]
Remove unused num_entries variable from PLA writer
Comment 7 Bastien Nocera 2009-09-17 15:03:34 UTC
Created attachment 143359 [details] [review]
Remove useless assignment
Comment 8 Bastien Nocera 2009-09-17 15:03:38 UTC
Created attachment 143360 [details] [review]
Fix retval of the PLA parser
Comment 9 Bastien Nocera 2009-09-17 15:03:41 UTC
Created attachment 143361 [details] [review]
You can't get a logo in atom:entry
Comment 10 Bastien Nocera 2009-09-17 15:03:45 UTC
Created attachment 143362 [details] [review]
Remove unused variable in PLS parser