Remove unused variable in xspf writer code

https://bugzilla.gnome.org/show_bug.cgi?id=595471