plparse/totem-pl-parser-xspf.c
@@ -80,11 +80,10 @@ totem_pl_parser_write_xspf (TotemPlParser *parser, GtkTreeModel *model,
 			   gpointer user_data, GError **error)
 {
 	GFileOutputStream *stream;
-	int num_entries_total, num_entries, i;
+	int num_entries_total, i;
 	char *buf;
 	gboolean success;
 
-	num_entries = totem_pl_parser_num_entries (parser, model, func, user_data);
 	num_entries_total = gtk_tree_model_iter_n_children (model, NULL);
 
 	stream = g_file_replace (output, NULL, FALSE, G_FILE_CREATE_NONE, NULL, error);
